--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -70,6 +70,7 @@
     }
 
     input[type="range"] {
+        appearance: none;
         -webkit-appearance: none;
         width: 100%;
         height: 6px;
