--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -204,7 +204,7 @@
     <div class="col-lg-8">
         <div class="video-section">
             <div class="video-container">
-                <!-- Browser-based camera will be inserted here by JavaScript -->
+                <!-- Camera UI and detection canvas are handled by browser-camera.js -->
                 <div class="video-overlay">
                     <h5 class="mb-0">Live Detection Feed</h5>
                     <small>Monitoring for objects in real-time</small>
@@ -355,4 +355,4 @@
         }
     });
 </script>
-{% endblock %} 
+{% endblock %}
